@@ -1,3 +1,8 @@
+2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3mhack.el (char-after): Byte-optimize it for old Emacsen.
+	(char-before): Ditto.
+
 2002-08-23  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* w3m-form.el (w3m-form-resume): Confirm `value' for text form
